@@ -5,6 +5,8 @@ noinst_LIBRARIES = libhelpers.a
 libhelpers_a_SOURCES = \
 directory.cc \
 directory.h \
+markup.cc \
+markup.h \
 process.cc \
 process.h \
 swapper.h
