@@ -46,7 +46,8 @@ class PluginManager
 public:
     // plugin methods
     static void load_plugins(const char* lib_paths);
-    static void dump_plugins(void);
+    static void list_plugins();
+    static void dump_plugins();
     static void release_plugins();
     static const BaseApi* get_api(PlugType, const char* name);
     static void instantiate(const BaseApi*, Module*, SnortConfig*);
