@@ -1,6 +1,8 @@
 105
 -- changed PREPROC to MODULE in profiling defines
 -- added --rule "<rule>" for easy command line testing
+-- added --list-plugins to see which plugins don't have modules
+-- added helpers/markup.{h,cc}
 
 104
 -- changed configure --with-libpcre-* to --with-pcre-* for consistency
